src/objects/BMCServiceDesk__Account_CI_Link__c.object
<CustomObject>
    <description>This object allows you to store data linking between accounts and configuration items.</description>
    <fields>
        <fullName>BMCServiceDesk__Class_Name__c</fullName>
        <description>This field stores the class name of the linked configuration item</description>
        <formula>BMCServiceDesk__FKConfiguration_Item__r.BMCServiceDesk__ClassName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Class Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKAccount__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account CI Links</relationshipLabel>
        <relationshipName>Account_CI_Links</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKConfiguration_Item__c</fullName>
        <description>This field stores the foreign key value of the linked configuration item</description>
        <label>Configuration Item</label>
        <referenceTo>BMCServiceDesk__BMC_BaseElement__c</referenceTo>
        <relationshipLabel>Account CI Links</relationshipLabel>
        <relationshipName>Account_CI_Links</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Instance_ID__c</fullName>
        <description>This field stores the instance id of the linked configuration item</description>
        <formula>BMCServiceDesk__FKConfiguration_Item__r.BMCServiceDesk__InstanceID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Instance ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Instance_Name__c</fullName>
        <description>This field stores the instance name of the linked configuration item</description>
        <formula>BMCServiceDesk__FKConfiguration_Item__r.BMCServiceDesk__Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Instance Name</label>
        <type>Text</type>
    </fields>
    <label>Account CI Link</label>
    <listViews>
        <fullName>BMCServiceDesk__All</fullName>
        <columns>BMCServiceDesk__FKAccount__c</columns>
        <columns>BMCServiceDesk__FKConfiguration_Item__c</columns>
        <columns>BMCServiceDesk__Instance_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Record #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account CI Links</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>